Still some overlapping, attempting fix by making card height smaller

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -449,11 +449,14 @@ table {
   .cardGroupSnapHeading {
     font-size: 2rem;
     padding-top: 25%; }
-  .card .cardText {
-    font-size: .75rem; }
-  .card .cardLinkText {
-    font-size: 1.5rem; }
-  .card .cardHeading {
-    font-size: 2rem; }
+  .card {
+    height: 50%;
+    min-height: 50vh; }
+    .card .cardText {
+      font-size: .75rem; }
+    .card .cardLinkText {
+      font-size: 1.5rem; }
+    .card .cardHeading {
+      font-size: 2rem; }
   .contactNav .heading {
     font-size: 2.5rem; } }
